# SIK-siktacka

./: .gitignore  CMakeLists.txt  Makefile  README.md  error.h  parser.cc  parser.h  server.cpp  siktacka-client.cc  siktacka-server.cc  sitacka-client.cpp  sitacka-server.cpp
client/: client.cc  client.h  gui_client.cc  gui_client.h
network/: connections.cc  connections.h  constants.h  i_connection_listener.h  poll.h  receiver.cc  receiver.h  sender.cc  sender.h  socket.cc  socket.h  types.h
server/: connections.h  events.cc  i_connection_listener.h  server.cc  server.h
sik/: connections.cc  connections.h  poll.h  receiver.cc  receiver.h  sender.cc  sender.h  types.h
siktacka/: board.h  client_message.cc  client_message.h  connections.cc  connections.h  game.cc  game.h  random.cc  random.h  server.cc  server.h  signal.h  snake.h  types.h  utility.h
siktacka/client/: client.cc  client.h  gui_client.cc  gui_client.h  parser.cc  parser.h
siktacka/events/: event.h  event_game_over.cc  event_game_over.h  event_pixel.h  event_player_eliminated.cc  event_player_eliminated.h
siktacka/game/: board.cc  board.h  events.cc  events.h  game.cc  game.h  i_event_listener.h  player.cc  player.h  random.h  snake.cc  snake.h
siktacka/game/events/: event.cc  event.h  event_factory.cc  event_factory.h  event_game_over.cc  event_game_over.h  event_new_game.cc  event_new_game.h  event_pixel.cc  event_pixel.h  event_player_eliminated.cc  event_player_eliminated.h
siktacka/protocol/client/: message.cc  message.h
siktacka/protocol/server/: constants.h  event.cc  event.h  event_game_over.cc  event_new_game.cc  event_new_game.h  event_pixel.cc  event_pixel.h  message.cc  message.h
siktacka/server/: buffer.cc  buffer.h  connections.cc  connections.h  events.h  server.cc  server.h
src/: error.h  siktacka-client.cc
src/client/: client.cc  client.h  gui_client.cc  gui_client.h  parser.cc  parser.h
src/network/: constants.h  receiver.cc  receiver.h  sender.cc  sender.h  socket.cc  socket.h
src/server/: buffer.h  connections.cc  connections.h  events.cc  events.h  server.cc  server.h
src/siktacka/: board.cc  board.h  game.cc  game.h  snake.cc
src/siktacka/events/: event.cc  event.h  event_factory.cc  event_factory.h  event_game_over.cc  event_game_over.h  event_new_game.cc  event_new_game.h  event_pixel.cc  event_pixel.h  event_player_eliminated.cc  event_player_eliminated.h
src/siktacka/protocol/: client_message.cc  client_message.h  constants.h  server_message.cc  server_message.h
system/: signal.h
tests/: malicious_server.cc  test_event.cc  test_message.cc
